arreglado ahora si espero

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
-    "BOT_TOKEN": "Nzc2MTA2MjU3NTk3MzMzNTE1.X6wDRw.XAIYYd0yUo678SExjcMffYVKMIc"
+    "BOT_TOKEN": "Nzc2MTA2MjU3NTk3MzMzNTE1.X6wDRw.XAIYYd0yUo678SExjcMffYVKMIc",
+    "prefix": "!"
 
 }
+
 
