--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     },
     "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme",
     "dependencies": {
-        "discord.js": "^11.6.4",
-        "megadb": "^3.4.0"
+        "discord.js": "^11.6.4"
     }
 }
