--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme",
     "dependencies": {
         "discord.js": "^12.5.1",
-        "npm": "^7.6.3",
-        "sqlite3": "^5.0.1"
+        "npm": "^7.6.3"
     }
 }
