--- a/config.json
+++ b/config.json
@@ -1,6 +1,209 @@
 {
     "BOT_TOKEN": "Nzc2MTA2MjU3NTk3MzMzNTE1.X6wDRw.XAIYYd0yUo678SExjcMffYVKMIc",
-    "prefix": "!"
+    "prefix": "&",
+    "memes": [
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        },
+        {
+            "nombre": "meme de prueba",
+            "url": "meme de prueba "
+        
+        }
+        
+    ]
 
 }
 
