--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "BOT_TOKEN": "Nzc2MTA2MjU3NTk3MzMzNTE1.X6wDRw.XAIYYd0yUo678SExjcMffYVKMIc",
     "prefix": "&",
+    "slaudos": ["hola", "¿todo bien?", "¿que haces?","nosequeresponder ", "sabes que esto solo es un aprueba de los slash commands"],
     "memes": [
         {
             "nombre": "meme de prueba",
