--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "dependencies": {
         "config.json": "^0.0.4",
         "discord.js": "^12.5.3",
-        "npm": "^7.6.3"
+        "ffmpeg": "^0.0.4",
+        "ffmpeg-static": "^4.3.0",
+        "npm": "^7.6.3",
+        "opusscript": "^0.0.8",
+        "ytdl-core": "^4.5.0"
     }
 }
