--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dependencies": {
         "config.json": "^0.0.4",
         "discord.js": "^12.5.3",
+        "mongodb": "^3.6.6",
+        "mongoose": "^5.12.7",
         "npm": "^7.6.3"
     }
 }
