--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dependencies": {
         "config.json": "^0.0.4",
         "discord.js": "^12.5.3",
+        "moment": "^2.29.1",
+        "moment-duration-format": "^2.3.2",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.7",
         "npm": "^7.12.0"
