--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "moment-duration-format": "^2.3.2",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.7",
-        "npm": "^7.12.0"
+        "npm": "^7.12.0",
+        "random-meow": "^3.9.1"
     }
 }
