--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme",
     "dependencies": {
         "config.json": "^0.0.4",
+        "discord-antiflood": "^2.1.1",
         "discord-buttons": "^2.4.1",
         "discord.js": "^12.5.3",
         "fumo-api": "^2.0.2",
