--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "mybot-heroku",
+    "name": "pancho-del-rancho",
     "version": "1.0.0",
     "description": "An in-depth guide on deploying your Discord.js bot on Heroku",
     "main": "index.js",
     "engines": {
-        "node": "12.x",
+        "node": "16.x",
         "npm": "*"
     },
     "scripts": {
@@ -17,7 +17,6 @@
         "url": "git+https://github.com/Victorio0005/git-bot.git"
     },
     "keywords": [
-        "heroku",
         "discord.js"
     ],
     "author": "synicalsyntax",
