--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "mongodb": "^3.6.9",
         "mongoose": "^5.12.13",
         "npm": "^7.15.0",
-        "random-meow": "^3.9.1"
+        "random-meow": "^3.9.1",
+        "zeew": "^0.1.11"
     }
 }
