--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "mongoose": "^5.12.13",
         "npm": "^7.15.0",
         "random-meow": "^3.9.1",
+        "util": "^0.12.4",
         "zeew": "^0.1.11"
     }
 }
