--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "npm": "*"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "node test.js",
         "start": "node index.js",
         "up": "git add . \n git commit -m 'nada' \n git push origin master"
     },
