--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme",
     "dependencies": {
         "canvas": "^2.8.0",
+        "child-process": "^1.0.2",
         "config.json": "^0.0.4",
         "discord-antiflood": "^2.1.1",
         "discord-buttons": "^2.4.1",
