--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "test": "node test.js",
         "start": "node index.js",
-        "up": "git add . \n git commit -m 'nada' \n git push origin master"
+        "subilo": "github"
     },
     "repository": {
         "type": "git",
