--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "discord-buttons": "^3.1.1",
         "discord.js": "^12.5.3",
         "fumo-api": "^2.0.5",
+        "general-search-engine": "^1.4.0",
         "moment": "^2.29.1",
         "moment-duration-format": "^2.3.2",
         "mongodb": "^3.6.9",
