arregle las confesiones del glicho

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "moment-duration-format": "^2.3.2",
         "mongodb": "^3.6.9",
         "mongoose": "^5.12.13",
+        "node-schedule": "^2.0.0",
         "npm": "^7.16.0",
         "random-meow": "^3.9.1",
         "util": "^0.12.4"
