--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "config.json": "^0.0.4",
         "discord-antiflood": "^2.1.1",
         "discord-buttons": "^3.1.1",
+        "discord-together": "^1.1.14",
         "discord.js": "^12.5.3",
         "fumo-api": "^2.0.5",
         "general-search-engine": "^1.4.0",
