--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "node-schedule": "^2.0.0",
         "npm": "^7.16.0",
         "random-meow": "^3.9.1",
-        "util": "^0.12.4"
+        "util": "^0.12.4",
+        "ytdl-core": "^4.8.3"
     }
 }
