--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "discord-buttons": "^3.1.1",
         "discord-together": "^1.1.14",
         "discord.js": "^12.5.3",
+        "distube": "^2.8.15",
         "ffmpeg-static": "^4.4.0",
         "fumo-api": "^2.0.5",
         "moment": "^2.29.1",
