Delete token cuz idk

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "BOT_TOKEN": "Nzc2MTA2MjU3NTk3MzMzNTE1.X6wDRw.XAIYYd0yUo678SExjcMffYVKMIc",
+    "BOT_TOKEN": "--------",
     "prefix": "&",
     "slaudos": ["hola", "¿todo bien?", "¿que haces?","nosequeresponder ", "sabes que esto solo es una prueba de los slash commands", "necesito mejores respuestas","la verdad los slash commands son muy raros por eso no hago otro como ban o kick","¿sear esto completamente aleatorio?",":orangutan:"]
 
